--- a/monopods.html
+++ b/monopods.html
@@ -11,7 +11,7 @@
           <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
         </a>
         <form action="index.html" method="post">
-            <button type="submit" name="start-search">Найти</button>
+            <button type="submit">Найти</button>
             <input type="search" name="search" id="search" placeholder="Поиск по сайту">
             <label for="search" class="visually-hidden">Поиск по сайту</label>
         </form>
@@ -41,6 +41,7 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <h1>Моноподы для селфи</h1>
       <ul>
@@ -49,117 +50,116 @@
         <li><a>Моноподы для селфи</a></li>
       </ul>
 <!-- Filter & Sort -->
-      <section>
-        <h2>Фильтр:</h2>
-        <form action="index.html" method="post">
-          <fieldset>
-            <legend>Цвет</legend>
+      <div class="main-wrap">
+        <section>
+          <h2>Фильтр:</h2>
+          <form action="index.html" method="post">
+            <fieldset>
+              <legend>Цвет</legend>
+              <ul>
+                <li>
+                  <input type="checkbox" name="black" id="filter-color-black" checked>
+                  <label for="filter-color-black">Черный</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="white" id="filter-color-white">
+                  <label for="filter-color-white">Белый</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="blue" id="filter-color-blue" checked>
+                  <label for="filter-color-blue">Синий</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="red" id="filter-color-red" checked>
+                  <label for="filter-color-red">Красный</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="pink" id="filter-color-pink">
+                  <label for="filter-color-pink">Розовый</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Bluetooth</legend>
+              <ul>
+                <li>
+                  <input type="radio" name="bluetooth" value="yes" id="filter-bluetooth-yes" checked>
+                  <label for="filter-bluetooth-yes">Есть</label>
+                </li>
+                <li>
+                  <input type="radio" name="bluetooth" value="no" id="filter-bluetooth-no">
+                  <label for="filter-bluetooth-no">Нет</label>
+                </li>
+              </ul>
+            </fieldset>
+            <button type="submit">Показать</button>
+          </form>
+        </section>
+        <div class="inner-wrap">
+          <section>
+            <h2>Сортировка:</h2>
+            <button type="button">По цене</button>
+            <button type="button">По типу</button>
+            <button type="button">По популярности</button>
+            <div class="sort-direction">
+              <button type="button">По возрастанию</button>
+              <button type="button">По убыванию</button>
+            </div>
+          </section>
+          <section>
             <ul>
               <li>
-                <input type="checkbox" name="black" id="filter-color-black" checked>
-                <label for="filter-color-black">Черный</label>
+                <a><h3>Любительская селфи-палка</h3></a>
+                <p>500 руб</p>
+                <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                <a href="#">В корзину</a>
+                <a href="#">Добавить к сравнению</a>
               </li>
               <li>
-                <input type="checkbox" name="white" id="filter-color-white">
-                <label for="filter-color-white">Белый</label>
+                <a><h3>Профессиональная селфи-палка </h3></a>
+                <p>1500 руб</p>
+                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка ">
+                <a href="#">В корзину</a>
+                <a href="#">Добавить к сравнению</a>
               </li>
               <li>
-                <input type="checkbox" name="blue" id="filter-color-blue" checked>
-                <label for="filter-color-blue">Синий</label>
+                <a><h3>Непотопляемая селфи-палка</h3></a>
+                <p>2500 руб</p>
+                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                <a href="#">В корзину</a>
+                <a href="#">Добавить к сравнению</a>
               </li>
               <li>
-                <input type="checkbox" name="red" id="filter-color-red" checked>
-                <label for="filter-color-red">Красный</label>
-              </li>
-              <li>
-                <input type="checkbox" name="pink" id="filter-color-pink">
-                <label for="filter-color-pink">Розовый</label>
+                <a><h3>Селфи-палка «Следуй за мной»</h3></a>
+                <p>4900 руб</p>
+                <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                <a href="#">В корзину</a>
+                <a href="#">Добавить к сравнению</a>
               </li>
             </ul>
-          </fieldset>
-          <fieldset>
-            <legend>Bluetooth</legend>
+          </section>
+          <section>
+            <h2 class="visually-hidden">Навигация по страницам товаров</h2>
             <ul>
               <li>
-                <input type="radio" name="bluetooth" value="yes" id="filter-bluetooth-yes" checked>
-                <label for="filter-bluetooth-yes">Есть</label>
+                <a href="#">Назад</a>
               </li>
               <li>
-                <input type="radio" name="bluetooth" value="no" id="filter-bluetooth-no">
-                <label for="filter-bluetooth-no">Нет</label>
+                <a href="#">1</a>
+              </li>
+              <li>
+                <a href="#">2</a>
+              </li>
+              <li>
+                <a href="#">3</a>
+              </li>
+              <li>
+                <a href="#">Вперед</a>
               </li>
             </ul>
-          </fieldset>
-          <button type="submit" name="submit">Показать</button>
-        </form>
-      </section>
-      <section>
-        <h2>Сортировка:</h2>
-        <form action="index.html" method="post">
-          <ul>
-            <li>
-              <input type="radio" name="sort" value="by-price" id="by-price" class="visually-hidden" checked>
-              <label for="by-price">По цене</label>
-            </li>
-            <li>
-              <input type="radio" name="sort" value="by-type" id="by-type" class="visually-hidden">
-              <label for="by-type">По типу</label>
-            </li>
-            <li>
-              <input type="radio" name="sort" value="by-popularity" id="by-popularity" class="visually-hidden">
-              <label for="by-popularity">По популярности</label>
-            </li>
-          </ul>
-          <button type="button" name="up-dir">По возрастанию</button>
-          <button type="button" name="down-dir">По убыванию</button>
-        </form>
-      </section>
-      <ul>
-        <li>
-          <a><h3>Любительская селфи-палка</h3></a>
-          <p>500 руб</p>
-          <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-          <a href="#">В корзину</a>
-          <a href="#">Добавить к сравнению</a>
-        </li>
-        <li>
-          <a><h3>Профессиональная селфи-палка </h3></a>
-          <p>1500 руб</p>
-          <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка ">
-          <a href="#">В корзину</a>
-          <a href="#">Добавить к сравнению</a>
-        </li>
-        <li>
-          <a><h3>Непотопляемая селфи-палка</h3></a>
-          <p>2500 руб</p>
-          <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-          <a href="#">В корзину</a>
-          <a href="#">Добавить к сравнению</a>
-        </li>
-        <li>
-          <a><h3>Селфи-палка «Следуй за мной»</h3></a>
-          <p>4900 руб</p>
-          <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-          <a href="#">В корзину</a>
-          <a href="#">Добавить к сравнению</a>
-        </li>
-      </ul>
-      <section>
-        <h2 class="visually-hidden">Навигация по страницам товаров</h2>
-        <button type="button" name="page-down">Назад</button>
-        <ul>
-          <li>
-            <a href="#">1</a>
-          </li>
-          <li>
-            <a href="#">2</a>
-          </li>
-          <li>
-            <a href="#">3</a>
-          </li>
-        </ul>
-        <button type="button" name="page-up">Вперед</button>
-      </section>
+          </section>
+        </div> <!-- end of inner wrap -->
+      </div>  <!-- end of main wrap -->
     </main>
     <footer>
       <a href="index.html">
