Личный проект: завершаем базовую стилизацию
Завершаил базовую стилизацию главной и страницы каталога.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     	<div class="slider-popular-item">
         <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи">
         <div class="item-content">
-          <span>01</span>
+          <span class="slide-number">01</span>
           <h3>Делай селфи, как Бен Стиллер!</h3>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-          <a href="#">Подробнее</a>
+          <a href="#" class="button">Подробнее</a>
           <dl>
             <div class="definition-item">
               <dt>8,5 м</dt>
@@ -73,7 +73,7 @@
     	<div class="slider-popular-item">
         <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет">
         <div class="item-content">
-          <span>02</span>
+          <span class="slide-number">02</span>
           <h3>Худеем правильно!</h3>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a href="#">Подробнее</a>
@@ -88,7 +88,7 @@
     	<div class="slider-popular-item">
         <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер оснащеный мощным лазером">
         <div class="item-content">
-          <span>03</span>
+          <span class="slide-number">03</span>
           <h3>Порхает как бабочка, жалит как пчела!</h3>
           <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <a href="#">Подробнее</a>
@@ -111,41 +111,41 @@
     	</div>
     </section>
 <!-- Popular -->
-      <section>
+      <section class="popular-category">
         <h2 class="visually-hidden">Популярные категории</h2>
         <ul>
           <li>
-            <a href="#">
+            <a href="#" class="popular-category-link">
               <div></div> <!-- Размер и фон будет реализовни при стилизации -->
               <p>Виртуальная реальность</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="popular-category-link">
               <div></div> <!-- Размер и фон будет реализовни при стилизации -->
               <p>Моноподы для селфи</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="popular-category-link">
               <div></div> <!-- Размер и фон будет реализовни при стилизации -->
               <p>Экшн-камеры</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="popular-category-link">
               <div></div> <!-- Размер и фон будет реализовни при стилизации -->
               <p>Фитнес-браслеты</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="popular-category-link">
               <div></div> <!-- Размер и фон будет реализовни при стилизации -->
               <p>Умные часы</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="popular-category-link">
               <div></div> <!-- Размер и фон будет реализовни при стилизации -->
               <p>Квадрокоптеры</p>
             </a>
@@ -155,9 +155,9 @@
 <!-- Services -->
       <div class="slider-services">
         <div class="slider-services-navigation">
-          <button type="button">Доставка</button>
-          <button type="button">Гарантия</button>
-          <button type="button">Кредит</button>
+          <button type="button" class="button">Доставка</button>
+          <button type="button" class="button">Гарантия</button>
+          <button type="button" class="button">Кредит</button>
         </div>
         <div class="slider-services-item">
           <h3>Доставка</h3>
@@ -173,7 +173,7 @@
         </div>
       </div>
 <!-- Partners -->
-      <section>
+      <section class="partners">
         <h2 class="visually-hidden">Наши партнеры</h2>
         <ul>
           <li>
@@ -213,7 +213,7 @@
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
-          <a href="#">Подробнее о нас</a>
+          <a href="#" class="button">Подробнее о нас</a>
         </section>
         <section class="info">
           <h2>Контакты</h2>
