Личный проект: завершаем базовую стилизацию
Внес правки по рекомендации наставника

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <span class="slide-number">02</span>
           <h3>Худеем правильно!</h3>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-          <a href="#">Подробнее</a>
+          <a href="#" class="button">Подробнее</a>
           <dl>
             <div class="definition-item">
               <dt>48 часов</dt>
@@ -91,7 +91,7 @@
           <span class="slide-number">03</span>
           <h3>Порхает как бабочка, жалит как пчела!</h3>
           <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-          <a href="#">Подробнее</a>
+          <a href="#" class="button">Подробнее</a>
           <dl>
             <div class="definition-item">
               <dt>800 м</dt>
